--- a/package.json
+++ b/package.json
@@ -11,19 +11,15 @@
   },
   "dependencies": {
     "antd": "^5.15.0",
-    "i18next": "^23.7.16",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^13.5.0",
-    "react-router-dom": "^6.22.0",
-    "react-world-flags": "^1.6.0"
-  },
+    "react-router-dom": "^6.22.0"
+    },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/react-world-flags": "^1.6.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
